[metadata]
name = pytandem-rexeron
version = 0.0.1
author = Kieren Coetzee
author_email = me@kierencoetzee.com
description = A multi-threaded event manager package for triggering methods in tandem groups
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rexeron/pytandem
project_urls =
    Bug Tracker = https://github.com/rexeron/pytandem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src